# 100AC

./: .env.example  .gitignore  100AC_spec.md  README.md  __init__.py  cli.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  orchestrator.py  registry.py  test_agent.py
agents/alerts/: __init__.py  alert_manager.py
agents/data/: __init__.py  historical_data_loader.py  market_data_fetcher.py
agents/macro/: __init__.py  dollar_strength_analyzer.py  real_yield_analyzer.py
agents/signals/: __init__.py  entry_exit_signal_generator.py
agents/technical/: __init__.py  (+3 more)
configs/: agent_registry.yaml  workflows.yaml
docs/: ARCHITECTURE.md  CHECKPOINT_MACRO_ANALYSIS_2026-01-16.md  CHECKPOINT_SIGNAL_GENERATION_2026-01-16.md  EMAIL_SETUP.md  GOLD_SILVER_TRADING_PROJECT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_SUMMARY.md  PHASE2_PROGRESS.md  PHASE2_ROADMAP.md  QUICK_START.md  SESSION_CHECKPOINT_2026-01-16.md  WORKFLOW_ENGINE_COMPLETION.md
examples/: check_gold_silver_data.py  complete_gold_silver_analysis.py  gold_silver_trading_system.py  test_gold_silver_analysis.py  test_macro_analysis.py
orchestrator/: __init__.py  workflow_loader.py  workflow_scheduler.py  workflow_state.py
scripts/: analyze_gold_silver.py  schedule_gold_silver_analysis.py  start_scheduler.sh  stop_scheduler.sh
shared/: __init__.py  config.py  data_models.py  message_bus.py  utils.py  validators.py
tests/: conftest.py  test_agent.py  test_historical_data_loader.py  test_market_data_fetcher.py  test_message_bus.py  test_moving_average_calculator.py
(+3 files in other folders)
